# Manufacturing-Line-Emulator

./: .gitignore  Cargo.toml  Dockerfile  README.md  cargo-generate.toml  factory.json  log.txt  server.conf  simpleFactoryDiagram.mmd  testDiagram.mmd
data/: beltLoopTestFactory.json  factory.json  factory_block.json  factory_inefficient.json  index.html  inputBeltToProducerTest.json  lineFactory.json  outputBeltToConsumerTest.json  schema.json
data/static/: gizmo.jpg:Zone.Identifier  index.html
src/: Dockerfile  guiwrapper.rs  json.rs  machine.rs  main.rs  server.rs  servers.rs
