[package]
name = "manufacturing-emu"
version = "0.0.1"
description = "Emulator for manufacturing line layouts"
repository = "https://github.com/nnaapp/Manufacturing-Line-Emulator"

[dependencies]
glium = { version = "0.34.0", optional = true }
imgui = { version = "0.11.0", optional = true }
imgui-glium-renderer = { version = "0.11.0", optional = true }
imgui-winit-support = { version = "0.11.0", optional = true }
local-ip-address = { version = "0.6.0", optional = true }
log2 = { version = "0.1.11", optional = true }
opcua = { version = "0.12.0", optional = true }
rand = { version = "0.8.5", optional = true }
serde = { version = "1.0.196", features = ["derive"], optional = true }
serde_json = { version = "1.0.113", optional = true }
winit = { version = "0.29.15", optional = true }

[features]
build-simulator = ["local-ip-address", "log2", "opcua", "rand", "serde", "serde_json"]
build-wrapper = ["glium", "imgui", "imgui-glium-renderer", "imgui-winit-support", "winit"]

[[bin]]
name = "simulator"
path = "src/main.rs"
required-features = ["build-simulator"]

[[bin]]
name = "wrapper"
path = "src/guiwrapper.rs"
required-features = ["build-wrapper"]
