[package]
name = "manufacturing-emu"
version = "0.0.1"
description = "Emulator for manufacturing line layouts"
repository = "https://github.com/nnaapp/Manufacturing-Line-Emulator"

edition = "2021"

[dependencies]
in-container = "1.1.0"
anyhow = "1.0.81"
actix-web = { version = "4.5.1", optional = true }
actix-files = { version = "0.6.5", optional = true }
eframe = { version = "0.26.2", optional = true }
egui_extras = { version = "0.26.2", optional = true }
local-ip-address = { version = "0.6.0", optional = true }
log2 = { version = "0.1.11", optional = true }
opcua = { version = "0.12.0", optional = true }
rand = { version = "0.8.5", optional = true }
serde = { version = "1.0.196", features = ["derive"], optional = true }
serde_json = { version = "1.0.113", optional = true }
jsonschema = "0.17.1"

[features]
build-simulator = ["local-ip-address", "log2", "opcua", "rand", "serde", "serde_json", "actix-web", "actix-files"]
build-wrapper = ["eframe", "egui_extras"]

[[bin]]
name = "simulator"
path = "src/main.rs"
required-features = ["build-simulator"]

[[bin]]
name = "wrapper"
path = "src/guiwrapper.rs"
required-features = ["build-wrapper"]
