[package]
name = "manufacturing-emu"
version = "0.0.1"
description = "Emulator for manufacturing line layouts"
repository = "https://github.com/nnaapp/Manufacturing-Line-Emulator"

edition = "2021"

[dependencies]
chrono = "0.4.38"
in-container = "1.1.0"
anyhow = "1.0.81"
actix-web = "4.5.1"
actix-files = "0.6.5"
local-ip-address = "0.6.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3" }
opcua = "0.12.0"
rand = "0.8.5"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
jsonschema = "0.17.1"

